# demographic-test-images

./: LICENSE  README.md  download_fairface.py  pyproject.toml
fairface/: ground_truth.json
